Added user authorization
